--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.1.1",
     "@next/mdx": "^16.1.4",
     "clsx": "^2.1.1",
+    "cookie-signature": "^1.2.2",
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.28",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/cookie-signature": "^1.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
