--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,10 @@
 {
   "name": "Yuvan Physics Lab",
   "short_name": "Yuvan Lab",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#f6f4ef",
+  "theme_color": "#f6f4ef",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
@@ -12,8 +16,5 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "theme_color": "#f6f4ef",
-  "background_color": "#f6f4ef",
-  "display": "standalone"
+  ]
 }
