chore: disable auto-start to prevent popup terminal

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "start:local": "next dev -p 4100",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
+    "start": "next start -p 4100",
     "lint": "eslint"
   },
   "dependencies": {
