Rebrand to YRC Physics Lab + SEO hardening

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Yuvan Physics Lab",
-  "short_name": "Yuvan Lab",
+  "name": "YRC Physics Lab",
+  "short_name": "YRC Physics Lab",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F5F6F8",
