--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start -p 4100",
-    "lint": "eslint"
+    "lint": "eslint",
+    "gen:icons": "node scripts/generate-icons.mjs"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
@@ -42,6 +43,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
+    "png-to-ico": "^2.1.8",
+    "sharp": "^0.34.4",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
