--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "YRC Physics Lab",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#F5F6F8",
-  "theme_color": "#2563EB",
+  "background_color": "#F4F0E6",
+  "theme_color": "#0B1F3A",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
