--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "YRC Physics Lab",
-  "short_name": "YRC Physics Lab",
+  "short_name": "YRC Lab",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#F4F0E6",
-  "theme_color": "#0B1F3A",
+  "theme_color": "#0B1F3B",
   "icons": [
     {
       "src": "/icons/android-chrome-192x192.png",
